--- a/.github/workflows/kernel-a13-5.15.yml
+++ b/.github/workflows/kernel-a13-5.15.yml
@@ -40,14 +40,14 @@ jobs:
       matrix:
         include:
           # 从谷歌提交找到补丁，修复94与104的兼容性问题
-          - sub_level: "74"
-            os_patch_level: "2023-01"
-          - sub_level: "94"
-            os_patch_level: "2023-05"
-          - sub_level: "104"
-            os_patch_level: "2023-07"
-          - sub_level: "123"
-            os_patch_level: "2023-11"
+          #- sub_level: "74"
+          #  os_patch_level: "2023-01"
+          #- sub_level: "94"
+          #  os_patch_level: "2023-05"
+          #- sub_level: "104"
+          #  os_patch_level: "2023-07"
+          #- sub_level: "123"
+          #  os_patch_level: "2023-11"
           #- sub_level: "137"
           #  os_patch_level: "2024-01"
           #- sub_level: "144"
@@ -58,10 +58,10 @@ jobs:
           #   os_patch_level: "2024-07"
           #- sub_level: "151"
           #  os_patch_level: "2024-08"
-          - sub_level: "167"
-            os_patch_level: "2024-11"
-          - sub_level: "170"
-            os_patch_level: "2025-01"
+          #- sub_level: "167"
+          #  os_patch_level: "2024-11"
+          #- sub_level: "170"
+          #  os_patch_level: "2025-01"
           #- sub_level: "178"
           #  os_patch_level: "2025-03"
           #- sub_level: "180"
