--- a/.github/workflows/kernel-a13-5.10.yml
+++ b/.github/workflows/kernel-a13-5.10.yml
@@ -51,14 +51,14 @@ jobs:
           #  os_patch_level: "2024-06"
           #- sub_level: "214"
           #  os_patch_level: "2024-07"
-          #- sub_level: "218"
-          #  os_patch_level: "2024-08"
+          - sub_level: "218"
+            os_patch_level: "2024-08"
           #- sub_level: "223"
           #  os_patch_level: "2024-11"
           #- sub_level: "228"
           #  os_patch_level: "2025-01"
-          - sub_level: "X"
-            os_patch_level: "lts"
+          #- sub_level: "X"
+          #  os_patch_level: "lts"
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
