--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -1,8 +1,19 @@
 name: Test Release
 
+# allow git tag + release creation
 permissions:
   contents: write
   actions: write
+
+# Define a reusable map of all the 'with:' inputs for kernel builds
+# We'll reference this via *build-args below instead of using the invalid *same-inputs*
+x-build-args: &build-args
+  make_release:     ${{ inputs.make_release }}
+  kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  kernelsu_branch:  ${{ inputs.kernelsu_branch }}
+  version:          ${{ inputs.version }}
+  use_zram:         ${{ inputs.use_zram }}
+  use_kpm:          ${{ inputs.use_kpm }}
 
 on:
   workflow_dispatch:
@@ -70,43 +81,37 @@ jobs:
   build-kernel-a12-5-10:
     if: ${{ inputs.kernels_to_build == 'all' || contains(inputs.kernels_to_build, 'a12-5.10') }}
     uses: ./.github/workflows/kernel-a12-5.10.yml
-    with:
-      make_release:     ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch:  ${{ inputs.kernelsu_branch }}
-      version:          ${{ inputs.version }}
-      use_zram:         ${{ inputs.use_zram }}
-      use_kpm:          ${{ inputs.use_kpm }}
+    with: *build-args
     secrets: inherit
 
   build-kernel-a13-5-10:
     if: ${{ inputs.kernels_to_build == 'all' || contains(inputs.kernels_to_build, 'a13-5.10') }}
     uses: ./.github/workflows/kernel-a13-5.10.yml
-    with: *same-inputs*
+    with: *build-args
     secrets: inherit
 
   build-kernel-a13-5-15:
     if: ${{ inputs.kernels_to_build == 'all' || contains(inputs.kernels_to_build, 'a13-5.15') }}
     uses: ./.github/workflows/kernel-a13-5.15.yml
-    with: *same-inputs*
+    with: *build-args
     secrets: inherit
 
   build-kernel-a14-5-15:
     if: ${{ inputs.kernels_to_build == 'all' || contains(inputs.kernels_to_build, 'a14-5.15') }}
     uses: ./.github/workflows/kernel-a14-5.15.yml
-    with: *same-inputs*
+    with: *build-args
     secrets: inherit
 
   build-kernel-a14-6-1:
     if: ${{ inputs.kernels_to_build == 'all' || contains(inputs.kernels_to_build, 'a14-6.1') }}
     uses: ./.github/workflows/kernel-a14-6.1.yml
-    with: *same-inputs*
+    with: *build-args
     secrets: inherit
 
   build-kernel-a15-6-6:
     if: ${{ inputs.kernels_to_build == 'all' || contains(inputs.kernels_to_build, 'a15-6.6') }}
     uses: ./.github/workflows/kernel-a15-6.6.yml
-    with: *same-inputs*
+    with: *build-args
     secrets: inherit
 
   trigger-release:
